test/valid/64854_positive_power/positive_power.agu
-- Author: 64854, Diogo Almeida

let positivePower (p, k) : (Int, Int) -> Int =
    if k <= 0 then 1 else if p <= 0 then 0 else p ^ k

let main(_) : Unit -> Unit =
    print(positivePower(2, 3))