test/invalid-semantic/64854_undeclared_variable/undeclared_variable.agu
-- Author: 64854, Diogo Almeida

-- y is not declared
let x : Int = y + 1